argo/apps/media-center/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-center
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - jellyfin.media.nora
        - sonarr.media.nora
        - radarr.media.nora
        - prowlarr.media.nora
        - seerr.media.nora
        - torrent.media.nora
        - bazarr.media.nora
      secretName: media-center-tls

  rules:
    - host: jellyfin.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096

    - host: sonarr.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989

    - host: radarr.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878

    - host: prowlarr.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696

    - host: seerr.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 80

    - host: torrent.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080

    - host: bazarr.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
